fixed white-space credits wrapping issue for firefox

--- a/src/components/customMapboxControls/MBCredits.styl
+++ b/src/components/customMapboxControls/MBCredits.styl
@@ -17,6 +17,7 @@
     padding-left: 8px;
     z-index: 499!important;
     line-height: 25px;
+    white-space: nowrap;
     .mBCredit{
       color: rgb(80,80,80);
       font-size: 9pt;
